--- a/Legodudes/index.html
+++ b/Legodudes/index.html
@@ -8,6 +8,87 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="content">
+        <header>
+            <a href="index.html" id="logo"><img src="website_images/LD_logo.svg" alt="legodudes"></a>></a> 
+            <button id="shoppingcart">
+                <span id="caartcount">99</span>
+                <img src="website_images/legocart.svg" alt ="Handlevogn">
+            </button>
+            <nav>
+                <ul>
+                    <li><a href="#">City</a></li>
+                    <li><a href="#">Ninjago</a></li>
+                    <li><a href="#">Castles & knigfht</a></li>
+                    <li><a href="#">Marine & pirates</a></li>
+                    <li><a href="#">Movies cahrahters</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>
+            <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>       <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>       <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>       <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>       <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>       <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>
+            <h2>Ninjago</h2>
+            <article class="product-card">
+                <img src="website_images/PROD_dragon_zane.webp" alt="PRODUKTTITTEL"/>
+                <a href="#KATEGORISDE">Ninjago</a>
+                <h3>Dragon Zane</h3>
+                <p>kr. 89,-</p>
+                <button>Legg til i handlekurv</button>
+            </article>
+        </main>
+        <footer>
+            <p>2025 &copy; Legodudes</p>
+        </footer>
+    </div>
 </body>
 </html>
